# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.12

  - WL#11876, Improve connection properties design.

  - WL#11933, Connector/J 8.0 X DevAPI reference documentation update.

  - WL#11860, Ensure >= 75% code coverage.

  - Fix for Bug#90753 (27977617), WAIT_TIMEOUT EXCEEDED MESSAGE NOT TRIGGERED.

  - Fix for Bug#85941 (25924324), WASNULL NOT SET AFTER GETBYTES IS CALLED.

  - Fix for Bug#28066709, COLLECTION.CREATEINDEX() TEST IS BROKEN AFTER WL#11808 IMPLEMENTATION.

  - Fix for Bug#90872 (28027459), FILTERPARAMS CLASS IS NOT NEEDED.

  - Fix for Bug#27522054, POSSIBLE ASYNC XPROTOCOL MESSAGE HANDLING PERF ISSUE.
    The "xdevapi.useAsyncProtocol" connection property default value is changed to "false".

Version 8.0.11

  - WL#11293, DevAPI: Support new locking modes : NOWAIT and SKIP LOCKED.

  - Fix for Bug#90029 (27678308), FAILURE WHEN GETTING GEOMCOLLECTION COLUMN TYPE.

  - Fix for BUG#90024 (27677574), SOME TESTS FAILED AGAINST MYSQL 8.0.5 BECAUSE OF DEPRECATED FEATURES REMOVAL.

  - Fix for Bug#86741 (26314325), Multi-Host connection with autocommit=0 getAutoCommit maybe wrong.

  - Fix for Bug#27231383, PROVIDE MAVEN-FRIENDLY COMMERCIAL PACKAGES WITHOUT "-BIN".

  - Fix for Bug#26819691, SETTING PACKETDEBUGBUFFERSIZE=0 RESULTS IN CONNECTION FAILURE.

  - Fix for Bug#88227 (27029657), Connector/J 5.1.44 cannot be used against MySQL 5.7.20 without warnings.

  - Fix for Bug#27374581, CONNECTION FAILS WHEN GPL SERVER STARTED WITH TLS-VERSION=TLSV1.2.

  - WL#11419, DevAPI: New document _id generation support.

  - WL#11620, Change caching_sha2_password padding.

  - WL#11604, DevAPI: Add SHA256_MEMORY support.

  - Fix for BUG#86278 (26092824), SUPPORT CUSTOM CONSTRUCTION OF SSLSOCKET DURING CONNECTION ESTABLISHMENT.

  - Fix for BUG#27226293, JSONNUMBER.GETINTEGER() & NUMBERFORMATEXCEPTION.

  - WL#10527, Clean up Protocol and Session interfaces.

Version 8.0.10
